FEAT: Soporte completo para cifrado de archivos binarios con AES